@@ -165,6 +165,7 @@ FORMAT_BOT_HEADER_FSET,
 FORMAT_BWALL_FSET,
 
 FORMAT_CHANNEL_SIGNOFF_FSET,
+FORMAT_CHANNEL_URL_FSET,
 
 FORMAT_COMPLETE_FSET,
 FORMAT_CONNECT_FSET,
