@@ -47,6 +47,7 @@ IrcVariable fset_array[] =
 	{ "BWALL",		0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 
 	{ "CHANNEL_SIGNOFF",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
+	{ "CHANNEL_URL",	0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	
 	{ "COMPLETE",		0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
 	{ "CONNECT",		0,STR_TYPE_VAR,	0, NULL, NULL, 0, 0},
@@ -574,6 +575,7 @@ void create_fsets(Window *win, int ansi)
 	fset_string_var(FORMAT_BOT_FSET, DEFAULT_FORMAT_BOT_FSET);
 	fset_string_var(FORMAT_BWALL_FSET, DEFAULT_FORMAT_BWALL_FSET);
 	fset_string_var(FORMAT_CHANNEL_SIGNOFF_FSET, DEFAULT_FORMAT_CHANNEL_SIGNOFF_FSET);
+	fset_string_var(FORMAT_CHANNEL_URL_FSET, DEFAULT_FORMAT_CHANNEL_URL_FSET);
 	fset_string_var(FORMAT_CONNECT_FSET, DEFAULT_FORMAT_CONNECT_FSET);
 	fset_string_var(FORMAT_COMPLETE_FSET, DEFAULT_FORMAT_COMPLETE_FSET);
 	fset_string_var(FORMAT_CTCP_FSET, DEFAULT_FORMAT_CTCP_FSET);
